Revert partial bug fix of generating too much classes
We’ll solve this soon in both CSS and TypeScript

--- a/packages/css/src/components/breakout/breakout.scss
+++ b/packages/css/src/components/breakout/breakout.scss
@@ -83,7 +83,7 @@ $ams-breakout-row-span-max: 4;
 }
 
 @media screen and (min-width: $ams-breakpoint-medium) {
-  @for $i from 1 through $ams-grid-column-count-medium {
+  @for $i from 1 through $ams-grid-column-count {
     .ams-breakout__cell--col-span-#{$i}-medium {
       @include ams-grid__cell--span-medium($i);
     }
@@ -95,7 +95,7 @@ $ams-breakout-row-span-max: 4;
 }
 
 @media screen and (min-width: $ams-breakpoint-wide) {
-  @for $i from 1 through $ams-grid-column-count-wide {
+  @for $i from 1 through $ams-grid-column-count {
     .ams-breakout__cell--col-span-#{$i}-wide {
       @include ams-grid__cell--span-wide($i);
     }
